@@ -399,6 +399,92 @@ class DuplicateCheckFullIntegrationTest {
 
     @Test
     void
+        checkDuplicates_withoutExistingDuplicatesAndIsJdvDuplicateCheckActiveTrueAndLockedStatus_shouldCreateNewDuplicateWithIgnoredStatus()
+            throws DocumentationUnitNotExistsException {
+      // Arrange
+      var docUnitToBeChecked =
+          generateNewDocumentationUnit(
+              docOffice,
+              Optional.of(
+                  CreationParameters.builder()
+                      .documentNumber("DocumentNumb1")
+                      .decisionDate(LocalDate.of(2020, 12, 1))
+                      .fileNumbers(List.of("AZ-123"))
+                      .publicationStatus(PublicationStatus.LOCKED)
+                      .build()));
+
+      var docUnitDuplicateDTO =
+          generateNewDocumentationUnit(
+              docOffice,
+              Optional.of(
+                  CreationParameters.builder()
+                      .documentNumber("DocumentNumb2")
+                      .decisionDate(LocalDate.of(2020, 12, 1))
+                      .isJdvDuplicateCheckActive(true)
+                      .fileNumbers(List.of("AZ-123"))
+                      .build()));
+
+      assertThat(duplicateRelationRepository.findAll()).isEmpty();
+
+      // Act
+      duplicateCheckService.checkDuplicates(docUnitToBeChecked.getDocumentNumber());
+
+      var foundDocUnit =
+          (DocumentationUnit) documentationUnitService.getByUuid(docUnitToBeChecked.getId());
+
+      // Assert
+      assertThat(duplicateRelationRepository.findAll()).hasSize(1);
+      DuplicateRelation duplicate =
+          foundDocUnit.managementData().duplicateRelations().stream().findFirst().get();
+      assertThat(duplicate.documentNumber()).isEqualTo(docUnitDuplicateDTO.getDocumentNumber());
+      assertThat(duplicate.status()).isEqualTo(DuplicateRelationStatus.IGNORED);
+    }
+
+    @Test
+    void
+        checkDuplicates_withoutExistingDuplicatesAndIsJdvDuplicateCheckActiveTrueAndDuplicatedStatus_shouldCreateNewDuplicateWithIgnoredStatus()
+            throws DocumentationUnitNotExistsException {
+      // Arrange
+      var docUnitToBeChecked =
+          generateNewDocumentationUnit(
+              docOffice,
+              Optional.of(
+                  CreationParameters.builder()
+                      .documentNumber("DocumentNumb1")
+                      .decisionDate(LocalDate.of(2020, 12, 1))
+                      .isJdvDuplicateCheckActive(true)
+                      .fileNumbers(List.of("AZ-123"))
+                      .build()));
+
+      var docUnitDuplicateDTO =
+          generateNewDocumentationUnit(
+              docOffice,
+              Optional.of(
+                  CreationParameters.builder()
+                      .documentNumber("DocumentNumb2")
+                      .decisionDate(LocalDate.of(2020, 12, 1))
+                      .publicationStatus(PublicationStatus.DUPLICATED)
+                      .fileNumbers(List.of("AZ-123"))
+                      .build()));
+
+      assertThat(duplicateRelationRepository.findAll()).isEmpty();
+
+      // Act
+      duplicateCheckService.checkDuplicates(docUnitToBeChecked.getDocumentNumber());
+
+      var foundDocUnit =
+          (DocumentationUnit) documentationUnitService.getByUuid(docUnitToBeChecked.getId());
+
+      // Assert
+      assertThat(duplicateRelationRepository.findAll()).hasSize(1);
+      DuplicateRelation duplicate =
+          foundDocUnit.managementData().duplicateRelations().stream().findFirst().get();
+      assertThat(duplicate.documentNumber()).isEqualTo(docUnitDuplicateDTO.getDocumentNumber());
+      assertThat(duplicate.status()).isEqualTo(DuplicateRelationStatus.IGNORED);
+    }
+
+    @Test
+    void
         checkDuplicates_withoutExistingDuplicatesAndIsJdvDuplicateCheckActiveFalse_shouldCreateNewDuplicateWithIgnoredStatus()
             throws DocumentationUnitNotExistsException {
       // Arrange
@@ -899,10 +985,75 @@ class DuplicateCheckFullIntegrationTest {
     }
 
     @Test
-    void findDuplicates_withCourtAndFileNumber() throws DocumentationUnitNotExistsException {
+    void findNoDuplicates_withPartialMatchesOnCombinedCriteria()
+        throws DocumentationUnitNotExistsException {
       // Arrange
       var courtDTO = databaseCourtRepository.findBySearchStr("AG Aachen", 100).getFirst();
       var court = CourtTransformer.transformToDomain(courtDTO);
+      var documentType =
+          DocumentTypeTransformer.transformToDomain(
+              databaseDocumentTypeRepository.findAll().getFirst());
+      var documentType2 =
+          DocumentTypeTransformer.transformToDomain(
+              databaseDocumentTypeRepository.findAll().get(1));
+      generateNewDocumentationUnit(
+          docOffice,
+          Optional.of(
+              CreationParameters.builder()
+                  .documentNumber("DocumentNumb1")
+                  .court(court)
+                  .fileNumbers(List.of("AZ-123"))
+                  .documentType(documentType)
+                  .build()));
+
+      // Court does not match
+      generateNewDocumentationUnit(
+          docOffice,
+          Optional.of(
+              CreationParameters.builder()
+                  .documentNumber("DocumentNumb2")
+                  .fileNumbers(List.of("AZ-123"))
+                  .documentType(documentType)
+                  .build()));
+
+      // documentType does not match
+      generateNewDocumentationUnit(
+          docOffice,
+          Optional.of(
+              CreationParameters.builder()
+                  .documentNumber("DocumentNumb3")
+                  .court(court)
+                  .fileNumbers(List.of("AZ-123"))
+                  .documentType(documentType2)
+                  .build()));
+
+      // fileNumber does not match
+      generateNewDocumentationUnit(
+          docOffice,
+          Optional.of(
+              CreationParameters.builder()
+                  .documentNumber("DocumentNumb4")
+                  .court(court)
+                  .fileNumbers(List.of("differentAZ"))
+                  .documentType(documentType)
+                  .build()));
+
+      // Act
+      duplicateCheckService.checkAllDuplicates();
+
+      // Assert
+      assertThat(duplicateRelationRepository.findAll()).isEmpty();
+    }
+
+    @Test
+    void findDuplicates_withCourtAndFileNumberAndDocType()
+        throws DocumentationUnitNotExistsException {
+      // Arrange
+      var courtDTO = databaseCourtRepository.findBySearchStr("AG Aachen", 100).getFirst();
+      var court = CourtTransformer.transformToDomain(courtDTO);
+      var documentType =
+          DocumentTypeTransformer.transformToDomain(
+              databaseDocumentTypeRepository.findAll().getFirst());
       var docUnitToBeChecked =
           generateNewDocumentationUnit(
               docOffice,
@@ -911,6 +1062,7 @@ class DuplicateCheckFullIntegrationTest {
                       .documentNumber("DocumentNumb1")
                       .court(court)
                       .fileNumbers(List.of("AZ-123"))
+                      .documentType(documentType)
                       .build()));
 
       var duplicateDTO =
@@ -921,6 +1073,7 @@ class DuplicateCheckFullIntegrationTest {
                       .documentNumber("DocumentNumb2")
                       .court(court)
                       .fileNumbers(List.of("AZ-123"))
+                      .documentType(documentType)
                       .build()));
 
       // Act
@@ -939,11 +1092,14 @@ class DuplicateCheckFullIntegrationTest {
     }
 
     @Test
-    void findDuplicates_withCourtAndDeviatingFileNumber()
+    void findDuplicates_withCourtAndDeviatingFileNumberAndDocType()
         throws DocumentationUnitNotExistsException {
       // Arrange
       var courtDTO = databaseCourtRepository.findBySearchStr("AG Aachen", 100).getFirst();
       var court = CourtTransformer.transformToDomain(courtDTO);
+      var documentType =
+          DocumentTypeTransformer.transformToDomain(
+              databaseDocumentTypeRepository.findAll().getFirst());
       var docUnitToBeChecked =
           generateNewDocumentationUnit(
               docOffice,
@@ -952,6 +1108,7 @@ class DuplicateCheckFullIntegrationTest {
                       .documentNumber("DocumentNumb1")
                       .court(court)
                       .fileNumbers(List.of("AZ-123"))
+                      .documentType(documentType)
                       .build()));
 
       var duplicateDTO =
@@ -962,6 +1119,7 @@ class DuplicateCheckFullIntegrationTest {
                       .documentNumber("DocumentNumb2")
                       .court(court)
                       .deviatingFileNumbers(List.of("AZ-123"))
+                      .documentType(documentType)
                       .build()));
 
       // Act
@@ -980,8 +1138,11 @@ class DuplicateCheckFullIntegrationTest {
     }
 
     @Test
-    void findDuplicates_withDeviatingCourtsAndFileNumber()
+    void findDuplicates_withDeviatingCourtsAndFileNumberAndDocType()
         throws DocumentationUnitNotExistsException {
+      var documentType =
+          DocumentTypeTransformer.transformToDomain(
+              databaseDocumentTypeRepository.findAll().getFirst());
       // Arrange
       var docUnitToBeChecked =
           generateNewDocumentationUnit(
@@ -991,6 +1152,7 @@ class DuplicateCheckFullIntegrationTest {
                       .documentNumber("DocumentNumb1")
                       .deviatingCourts(List.of("AG Aachen", "BVerfG"))
                       .fileNumbers(List.of("AZ-123"))
+                      .documentType(documentType)
                       .build()));
 
       var duplicateDTO =
@@ -1001,6 +1163,7 @@ class DuplicateCheckFullIntegrationTest {
                       .documentNumber("DocumentNumb2")
                       .deviatingCourts(List.of("AG Aachen"))
                       .fileNumbers(List.of("AZ-123"))
+                      .documentType(documentType)
                       .build()));
 
       // Act
@@ -1019,11 +1182,14 @@ class DuplicateCheckFullIntegrationTest {
     }
 
     @Test
-    void findDuplicates_withDeviatingCourtsAndRegularCourt()
+    void findDuplicates_withDeviatingCourtsAndRegularCourtAndDocType()
         throws DocumentationUnitNotExistsException {
       // Arrange
       var courtDTO = databaseCourtRepository.findBySearchStr("AG Aachen", 1).getFirst();
       var courtAgAachen = CourtTransformer.transformToDomain(courtDTO);
+      var documentType =
+          DocumentTypeTransformer.transformToDomain(
+              databaseDocumentTypeRepository.findAll().getFirst());
       var docUnitToBeChecked =
           generateNewDocumentationUnit(
               docOffice,
@@ -1033,6 +1199,7 @@ class DuplicateCheckFullIntegrationTest {
                       .court(courtAgAachen)
                       .deviatingCourts(List.of("BVerfG"))
                       .fileNumbers(List.of("AZ-123"))
+                      .documentType(documentType)
                       .build()));
 
       var duplicateDTO =
@@ -1043,6 +1210,7 @@ class DuplicateCheckFullIntegrationTest {
                       .documentNumber("DocumentNumb2")
                       .deviatingCourts(List.of("BGH", "AG Aachen"))
                       .fileNumbers(List.of("AZ-123"))
+                      .documentType(documentType)
                       .build()));
 
       // Act
@@ -1061,11 +1229,14 @@ class DuplicateCheckFullIntegrationTest {
     }
 
     @Test
-    void findDuplicates_withDeviatingCourtsAndRegularCourtInverse()
+    void findDuplicates_withDeviatingCourtsAndRegularCourtInverseAndDocType()
         throws DocumentationUnitNotExistsException {
       // Arrange
       var courtDTO = databaseCourtRepository.findBySearchStr("AG Aachen", 1).getFirst();
-      var courtBGH = CourtTransformer.transformToDomain(courtDTO);
+      var court = CourtTransformer.transformToDomain(courtDTO);
+      var documentType =
+          DocumentTypeTransformer.transformToDomain(
+              databaseDocumentTypeRepository.findAll().getFirst());
       var docUnitToBeChecked =
           generateNewDocumentationUnit(
               docOffice,
@@ -1074,6 +1245,7 @@ class DuplicateCheckFullIntegrationTest {
                       .documentNumber("DocumentNumb1")
                       .deviatingCourts(List.of("AG Aachen"))
                       .fileNumbers(List.of("AZ-123"))
+                      .documentType(documentType)
                       .build()));
 
       var duplicateDTO =
@@ -1082,8 +1254,9 @@ class DuplicateCheckFullIntegrationTest {
               Optional.of(
                   CreationParameters.builder()
                       .documentNumber("DocumentNumb2")
-                      .court(courtBGH)
+                      .court(court)
                       .fileNumbers(List.of("AZ-123"))
+                      .documentType(documentType)
                       .build()));
 
       // Act
@@ -1102,8 +1275,11 @@ class DuplicateCheckFullIntegrationTest {
     }
 
     @Test
-    void findDuplicates_withDeviatingCourtsAndDeviatingFileNumber()
+    void findDuplicates_withDeviatingCourtsAndDeviatingFileNumberAndDocType()
         throws DocumentationUnitNotExistsException {
+      var documentType =
+          DocumentTypeTransformer.transformToDomain(
+              databaseDocumentTypeRepository.findAll().getFirst());
       // Arrange
       var docUnitToBeChecked =
           generateNewDocumentationUnit(
@@ -1113,6 +1289,7 @@ class DuplicateCheckFullIntegrationTest {
                       .documentNumber("DocumentNumb1")
                       .deviatingCourts(List.of("AG Aachen", "BVerfG"))
                       .fileNumbers(List.of("AZ-123"))
+                      .documentType(documentType)
                       .build()));
 
       var duplicateDTO =
@@ -1123,6 +1300,7 @@ class DuplicateCheckFullIntegrationTest {
                       .documentNumber("DocumentNumb2")
                       .deviatingCourts(List.of("AG Aachen"))
                       .deviatingFileNumbers(List.of("AZ-123"))
+                      .documentType(documentType)
                       .build()));
 
       // Act
@@ -1216,13 +1394,14 @@ class DuplicateCheckFullIntegrationTest {
   @Nested
   class FindAllDuplicatesQueryTest {
     @Test
-    void findAllDuplicates_withCourtAndFileNumber() throws DocumentationUnitNotExistsException {
+    void findAllDuplicates_withCourtAndFileNumberAndDocType()
+        throws DocumentationUnitNotExistsException {
       // Arrange
       var courtDTO = databaseCourtRepository.findBySearchStr("AG Aachen", 100).getFirst();
       var court = CourtTransformer.transformToDomain(courtDTO);
       var documentType =
           DocumentTypeTransformer.transformToDomain(
-              databaseDocumentTypeRepository.findAll().get(0));
+              databaseDocumentTypeRepository.findAll().getFirst());
 
       generateNewDocumentationUnit(
           docOffice,
@@ -1242,6 +1421,7 @@ class DuplicateCheckFullIntegrationTest {
               CreationParameters.builder()
                   .documentNumber("DocumentNumb2")
                   .court(court)
+                  .documentType(documentType)
                   .fileNumbers(List.of("AZ-123"))
                   .build()));
       // Gericht + abw. AZ
@@ -1251,6 +1431,7 @@ class DuplicateCheckFullIntegrationTest {
               CreationParameters.builder()
                   .documentNumber("DocumentNumb3")
                   .court(court)
+                  .documentType(documentType)
                   .deviatingFileNumbers(List.of("AZ-123"))
                   .build()));
       // abw. Gericht + AZ
@@ -1260,6 +1441,7 @@ class DuplicateCheckFullIntegrationTest {
               CreationParameters.builder()
                   .documentNumber("DocumentNumb4")
                   .deviatingCourts(List.of("AG Aachen"))
+                  .documentType(documentType)
                   .fileNumbers(List.of("AZ-123"))
                   .build()));
       // abw. Gericht + abw. AZ
@@ -1269,6 +1451,7 @@ class DuplicateCheckFullIntegrationTest {
               CreationParameters.builder()
                   .documentNumber("DocumentNumb5")
                   .deviatingCourts(List.of("AG Aachen"))
+                  .documentType(documentType)
                   .deviatingFileNumbers(List.of("AZ-123"))
                   .build()));
 
